--- a/bdmultimedia/Templates/aLaUne.html
+++ b/bdmultimedia/Templates/aLaUne.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 
 {% block body %}
+<body>
     <div class="container-fluid">
         <div class="col-md-11">
             <div class="page-header">
@@ -11,7 +12,7 @@
     <div>
         <div class="col-md-10 col-md-offset-1">
             <br>
-            <!--(21-06-2018) liste non-utilisés : [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 58, 59, 61, 62, 63, 64, 65, 66, 67, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99, 100, 101, 102, 103, 104, 105, 106, 107, 108, 109, 110, 111, 112, 113, 114, 115, 116, 117, 118, 119, 120, 121, 122, 123, 124, 125, 126, 127, 128, 129, 130, 131, 132, 133, 134, 135, 136, 137, 138, 139, 140, 141, 142, 143, 144, 145, 146, 147, 148, 149, 150, 151, 152, 153, 154, 155, 157, 158, 159, 160, 161, 162, 163] -->
+            <!--(21-06-2018) liste non-utilisés : [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 34, 35, 36, 37, 38, *39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 58, 59, 61, 62, 63, 64, 65, 66, 67, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99, 100, 101, 102, 103, 104, 105, 106, 107, 108, 109, 110, 111, 112, 113, 114, 115, 116, 117, 118, 119, 120, 121, 122, 123, 124, 125, 126, 127, 128, 129, 130, 131, 132, 133, 134, 135, 136, 137, 138, 139, 140, 141, 142, 143, 144, 145, 146, 147, 148, 149, 150, 151, 152, 153, 154, 155, 157, 158, 159, 160, 161, 162, 163] -->
             <!--liste déjà utilisés : [156, 68, 69, 33] -->
             {% for outil in outils %}
                 {% if outil.pk == 33 %}
@@ -48,12 +49,13 @@
         </div>
     </div>
     <div class='container-fluid'>
+        <div id="loader" style="display : none; top : 400px;"></div>
             <div class="col-md-10 col-md-offset-1" style=" top: 400px;">
                 <br>
-                <form method='GET' class='' action='/recherche_motcle/'>
+                <form method='GET' class='' action='/recherche_motcle/' onsubmit="showLoader()">
                     <div class="input-group form-group-no-border mx-auto" style="margin-bottom: 0px; font-size: 32px;">
-                       <span class="input-group-addon cfe-nav" style='color:#000'>
-                            <span class="glyphicon glyphicon-search" aria-hidden="true" style="color: #404040;"></span>
+                       <span class="input-group-addon cfe-nav">
+                            <button style="border: none; background-color: #eeeeee;;"><span class="glyphicon glyphicon-search" aria-hidden="true" style="color: #404040;"></span></button>
                             <i class="fa fa-search" aria-hidden="true"></i>
                         </span>
                         <input type="text" name="q" data-toggle="popover" data-placement="bottom" data-content='Appuyez sur la touche "enter" pour lancer la recherche' class="form-control cfe-nav mt-0 py-3" placeholder="Recherche par mots-clés" value="" style="" data-original-title="" title="">
@@ -99,6 +101,8 @@
             </ul>
         </div>
 </aside>
+<script type="text/javascript" src="../static/scripts/loader.js"></script>
+</body>
 {% endblock %}
 
 {% block footer %}
