--- a/bdmultimedia/Templates/search.html
+++ b/bdmultimedia/Templates/search.html
@@ -6,7 +6,7 @@
 {% load bootstrap_tags %}
 
 
-{% block title %} Recherche - Catalogue raisonné de dispositifs de médiation de la musique{% endblock %}
+{% block title %} Recherche avancée - Catalogue raisonné de dispositifs de médiation de la musique{% endblock %}
 
 {% block body %}
 
@@ -16,8 +16,7 @@
 	<p>&nbsp;</p>
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    <h3 class="panel-title"><center>Recherche - Catalogue raisonné de dispositifs de médiation de la musique</center></h3>
-                    <br>
+                    <h3 class="panel-title"><center>Recherche avancée</center></h3>
                     <small><center><a href="../recherche_motcle">Recherche par mots-clés</a></center></small>
                 </div>
                 <div class="panel-body">
