--- a/bdmultimedia/static/css/style.css
+++ b/bdmultimedia/static/css/style.css
@@ -61,14 +61,14 @@ center iframe, center img{
     border : solid medium #4eabb4;
 }
 
-#result iframe{
+#result iframe, #result img{
     border : solid medium #4eabb4;
     width : 200px;
     height : 200px;
 }
 
 #lien:hover{
-    opacity:0.3;
+    opacity:0.4;
 }
 #lien{
     background-color : #505050;
@@ -84,22 +84,19 @@ center iframe, center img{
     opacity : 1;
 }
 
-/*
 #loader {
-  position: absolute;
+  position: fixed;
   left: 50%;
   top: 50%;
-  z-index: 1;
+  z-index: 10;
   width: 150px;
   height: 150px;
   margin: -75px 0 0 -75px;
-  border: 16px solid #f3f3f3;
+  border: 20px solid #f3f3f3;
   border-radius: 50%;
-  border-top: 16px solid #3498db;
-  width: 120px;
-  height: 120px;
-  -webkit-animation: spin 2s linear infinite;
-  animation: spin 2s linear infinite;
+  border-top: 20px solid #2980b9;
+  -webkit-animation: spin 1s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+  animation: spin 1.s cubic-bezier(0.5, 0, 0.5, 1) infinite;
 }
 
 @-webkit-keyframes spin {
@@ -112,27 +109,3 @@ center iframe, center img{
   100% { transform: rotate(360deg); }
 }
 
-/* Add animation to "page content"
-.animate-bottom {
-  position: relative;
-  -webkit-animation-name: animatebottom;
-  -webkit-animation-duration: 1s;
-  animation-name: animatebottom;
-  animation-duration: 1s
-}
-
-@-webkit-keyframes animatebottom {
-  from { bottom:-100px; opacity:0 }
-  to { bottom:0px; opacity:1 }
-}
-
-@keyframes animatebottom {
-  from{ bottom:-100px; opacity:0 }
-  to{ bottom:0; opacity:1 }
-}
-
-#myDiv {
-  display: none;
-  text-align: center;
-}
-*/
